--- a/dev_note/1.DB_REDIS.md
+++ b/dev_note/1.DB_REDIS.md
@@ -1,16 +1,15 @@
-
-1. 用户系统使用手机号来做账号，每注册一个用户就uid自增1,用户账号映射出一下一组key：
+REDIS
+======
+1.  用户系统使用手机号来做账号，每注册一个用户就uid自增1,用户账号映射出一下一组key
  - account:count  id (`uid 自增`)
  - account:user_list set(id) (`all user id`)
  - account:phone:[account] id (`phone <-> id map`)
  - account:password:[id] password(`id <-> password map`)
- 
-2. 用户信息数据结构
+2.  用户信息数据结构
  - user:info:[id] hash(`nickname、avatar、apartment、...`)
  - user:billing:[id] int
  - user:lv:[id]
-
-3. 用户关系数据结构
+3.  用户关系数据结构
  - friend:[id] set(id) (`all my friend id`)
  - friend:apply:[apply_uid]:[target_uid] "request string" ttl 24hours (`apply uid and target uid `)
  - friend:chat:[smaller_uid]:[bigger_uid] OrderSet(timestamp string)
