--- a/dev_note/1.DB_REDIS.md
+++ b/dev_note/1.DB_REDIS.md
@@ -5,6 +5,7 @@ REDIS
  - account:user_list set(id) (`all user id`)
  - account:phone:[account] id (`phone <-> id map`)
  - account:password:[id] password(`id <-> password map`)
+ - account:session:[id] session(`id <-> session map`)
 2.  用户信息数据结构
  - user:info:[id] hash(`nickname、avatar、apartment、...`)
  - user:billing:[id] int
@@ -13,3 +14,5 @@ REDIS
  - friend:[id] set(id) (`all my friend id`)
  - friend:apply:[apply_uid]:[target_uid] "request string" ttl 24hours (`apply uid and target uid `)
  - friend:chat:[smaller_uid]:[bigger_uid] OrderSet(timestamp string)
+
+4.  一对一
