--- a/dev_note/1.DB_REDIS.md
+++ b/dev_note/1.DB_REDIS.md
@@ -7,7 +7,7 @@ REDIS
  - account:password:[id] password(`id <-> password map`)
  - account:session:[id] session(`id <-> session map`)
 2.  用户信息数据结构
- - user:info:[id] hash(`nickname、avatar、apartment、...`)
+ - user:info:[id] hash(`nickname、avatar、city、...`)
  - user:billing:[id] int
  - user:lv:[id]
 3.  用户关系数据结构
