--- a/dev_note/2.PROTO.md
+++ b/dev_note/2.PROTO.md
@@ -1,6 +1,6 @@
 PROTO
 ======
-1. server 和 client 通过restful api 接口通信，通信协议定为protobuf （protobuf和json可以互相转换,但是是否binary效率更高）
+1. server 和 client 通过restful api 接口通信(不依赖http的错误码来做处理，以便以后可以直接改成tcp)，通信协议定为protobuf （protobuf和json可以互相转换,但是是否binary效率更高）
 2. server 启用微服务架构，服务之间通过初步分为四个服务（微服务使用consul 来注册/发现服务,还有全局的配置文件存储）： 
     1. API Gateway (唯一暴露給client的服务） 
     2. AUTH （账号认证服务，包括：注册、登录等等账号管理服务）
