--- a/dev_note/2.PROTO.md
+++ b/dev_note/2.PROTO.md
@@ -5,5 +5,5 @@ PROTO
     1. API Gateway (唯一暴露給client的服务） 
     2. AUTH （账号认证服务，包括：注册、登录等等账号管理服务）
     3. BUSINESS （业务逻辑处理服务器）
-    4. UDP服务 （client 语音聊天时udp 打洞）
+    4. UDP服务 （client 语音聊天使用webrtc ）
  
