--- a/dev_note/1.DB_REDIS.md
+++ b/dev_note/1.DB_REDIS.md
@@ -11,8 +11,8 @@ REDIS
  - user:billing:[id] int
  - user:lv:[id]
 3.  用户关系数据结构
- - friend:[id] set(id) (`all my friend id`)
- - friend:apply:[apply_uid]:[target_uid] "request string" ttl 24hours (`apply uid and target uid `)
- - friend:chat:[smaller_uid]:[bigger_uid] OrderSet(timestamp string)
+ - recent_contact:[id] List(id) (`recent_contact`)
+ - waiting_venter  SortSet(id score) (`score mean cost per min`)
+ - want_vent set(id) (`someone who want to vent`)
 
 4.  一对一
